<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/ivHero"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:transitionName="hero_image"
            android:src="@drawable/pic1"
            android:scaleType="centerCrop"
            android:background="@drawable/circle"/>

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_marginTop="@dimen/paddingL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textSize="@dimen/textSizeXL"
            android:textColor="@color/textOnPrimary"/>
        <TextView
            android:id="@+id/tvText"
            android:layout_marginTop="@dimen/paddingM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/textOnPrimary"
            android:maxWidth="300dp"
            android:textSize="@dimen/textSizeM"
            android:text="@string/welcome_text"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnNext"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/paddingL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_cta"/>
</RelativeLayout>