<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="photoOfTheDay"
            type="com.aerial.wallpapers.entity.Photo" />
        <variable
            name="photoOfTheDayLoading"
            type="Boolean" />
        <variable
            name="photoOfTheDayFailed"
            type="Boolean" />
        <variable
            name="collectionsFailed"
            type="Boolean" />
        <variable
            name="photosFailed"
            type="Boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.App.AppBarLayout">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="bottom"
                app:titleEnabled="true"
                app:title="@string/home_title"
                app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsintToolbar.ExpandedTextAppearance"
                app:expandedTitleMarginStart="@dimen/paddingM"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/ivWallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    tools:src="@drawable/pic3"
                    android:scaleType="centerCrop"
                    android:transitionName="hero_image"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/collapsing_app_bar_shadow_bg"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/paddingM"
                android:paddingBottom="@dimen/paddingM">

                <LinearLayout
                    style="@style/Widget.App.HomeCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        style="@style/Widget.App.HomeCategoryTitleWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/paddingS">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.App.HomeCategoryTitle"
                            android:text="@string/home_title_photo_of_the_day"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginLeft="@dimen/paddingM"
                        android:layout_marginRight="@dimen/paddingM">

                        <androidx.cardview.widget.CardView
                            android:visibility="@{photoOfTheDay == null ? View.GONE : View.VISIBLE}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/Widget.App.CardView">
                            <ImageView
                                android:id="@+id/ivPhotoOfTheDay"
                                tools:visibility="visible"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                tools:src="@drawable/pic1"
                                imageUrl="@{photoOfTheDay.imageUrlSquare}"
                                android:scaleType="centerCrop" />
                        </androidx.cardview.widget.CardView>

                        <com.facebook.shimmer.ShimmerFrameLayout
                            android:id="@+id/photoOfTheDayShimmer"
                            android:visibility="@{photoOfTheDayLoading ? View.VISIBLE : View.GONE}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <View
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/lightBackground"
                                clipToOutline="@{true}"/>
                        </com.facebook.shimmer.ShimmerFrameLayout>

                        <androidx.cardview.widget.CardView
                            android:visibility="@{photoOfTheDayFailed ? View.VISIBLE : View.GONE}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/Widget.App.CardView">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/textPrimary"
                                    android:text="@string/home_photo_of_the_day_failed"/>
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    style="@style/Widget.App.HomeCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        style="@style/Widget.App.HomeCategoryTitleWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.App.HomeCategoryTitle"
                            android:text="@string/home_title_collections"/>

                        <Button
                            android:id="@+id/tvAllCollections"
                            style="@style/Widget.App.HomeCategoryTitleButton"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_see_all"/>
                    </RelativeLayout>

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/vpCollections"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/homeCollectionHeight"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/Widget.App.HomeCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        style="@style/Widget.App.HomeCategoryTitleWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.App.HomeCategoryTitle"
                            android:text="@string/home_title_new_photos"/>

                        <Button
                            android:id="@+id/tvAllPhotos"
                            style="@style/Widget.App.Button.Borderless"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_see_all"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="160dp">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rlPhotos"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="@dimen/paddingM"
                            android:clipToPadding="false"/>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/paddingL">
                    <TextView
                        android:id="@+id/tvCopyright"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/home_copyright"/>
                </LinearLayout>

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/paddingM"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btnClearDb"
                        android:theme="@style/AppStyle.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Clear DB"/>
                    <Button
                        android:id="@+id/btnClearStorage"
                        android:theme="@style/AppStyle.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Clear Storage"/>
                </LinearLayout>-->
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>